welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:31: error: not found: value estFacemur
		if (testd==true && estFacemur()) {
                                   ^